# regular-manifold-containers

./: Examples.hs  LineExamples.hs  Main.hs  PlaneExamples.hs  README  regular-manifold-containers.cabal
CellularAutomata/: Life.hs
Data/RegularManifold/: ContextualClass.hs  OneManifold.hs
Data/RegularManifold/OneManifold/: Circle.hs  Line.hs
Data/RegularManifold/TwoManifold/: Cylinder.hs  InfiniteMobius.hs  Plane.hs  TwoManifoldClass.hs
